RIA-7642 Update hearing reqs witnesses languages (#1533)
* RIA-7642 Reassemble WitnessMidEventHandler into WitnessDraftMidEventHandler and WitnessUpdateMidEventHandler

* RIA-7642 Update WitnessesDraftMidEventHandlerTest

* RIA-7642 Test for the whole logic

* RIA-7642 Suppressions

* RIA-7642 Codestyle

* RIA-7641 Make dynamic list populate when existing selection was manually entered

* RIA-7642 Clean up dead code

* RIA-7642 Clean up InterpreterLanguagesUtils